  - Rebuilt the way bubbles are created, saved and edited
  - Simplified the bubble connection code
  - Click detection is now a lot more reliable
  - Destroyed 4 global variables
  - Combined duplicate (or similar at least) functions (inc. selectBubble and selectPath)
  - And, of course, cleaning up the selection code
- Minor Interface Updates
  - Added "load from file" button to the localStorage dialog box
  - Added start "recent colors" color panel to color picker
- Did other things I can't remember
  
Bug Fixes
Too Many to Count

Known Bugs
- Doesn't get and set last color chosen
- Holding & Releasing on the canvas after having selected a bubble creates a new bubble with the object toolbar (opens on mouse up)
- Clicking a path doesn't open the objecttoolbar
- Files loaded in can't be selected by box-selection until a bubble or path is selected with a click


Saturday, August 23, 2014 (v.13.1 Alpha):
Bug Fixes
- Discovered source of (main) Mozilla Bug, fixed it
- Toolbar height on seleciton of bubble is now fixed
- Lots of other bug fixes I don't remember

We're back! After fsck'ing up my computer badly and loosing much of my old data, we're back(ish) to where we were a month ago! So, hooray?


Thursday, June 11, 2015 (v.14 Alpha):

Phew, it's been a while, hasn't it? I completely rebuilt the core of the bubblemapper code, and am not completely finished. The result, however is that everything that works works a lot more reliable than before. Here's a list of changes I remember:

Features & Changes
- Rebuilt entirety of bubblemapper code (inside an object.)
    - Removed "edit mode" and reorganized the toolbar.
    - Changed how click triggering works (and fixed some bugs along the way)
    - Changed how bubble selections were stored and accessed
    - Changed how localstorage is accessed and saved to
    - Changed how the colorpicker chooses colors (still needs some work)
    - Removed bubble resizing
    - ... and more!